# wallabag-saver

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
