[package]
name = "wallabag-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallabag-api = "0.4.1"
futures = "0.3.26"
clap = { version = "3.2.2", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes"] }
anyhow = "1.0.70"
